<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtColosseum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_150"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="@dimen/dp_320"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/gray_rounded_line_background"
        android:maxLength="31"
        android:hint="@string/ko_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtColosseum" />


    <EditText
        android:id="@+id/editPassword"
        android:layout_width="@dimen/dp_320"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_15"
        android:padding="@dimen/dp_10"
        android:maxLength="15"
        android:hint="@string/ko_password"
        android:textSize="@dimen/sp_15"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        android:background="@drawable/gray_rounded_line_background"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/dp_320"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/sign_up_btn_background"
        android:text="@string/ko_sign_in"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFindId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/ko_find_email" />

        <Button
            android:id="@+id/btnFindPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/ko_find_password" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/border_top"
        android:text="@string/ko_sign_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>