<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wrap_cont"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_30"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical"
    app:layout_constraintVertical_bias="0">

    <ImageView
        android:id="@+id/img_topic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/txt_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/tab_indicator_text"
        android:textSize="@dimen/sp_18"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_topic"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/txt_date_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ko_date_topic"
        android:textSize="@dimen/sp_15"
        app:layout_constraintTop_toBottomOf="@+id/txt_topic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/txt_start_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_15"
        app:layout_constraintTop_toBottomOf="@+id/txt_topic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_date_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0" />

    <ImageView
        android:id="@+id/check_up"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:src="@drawable/ico_check"
        app:layout_constraintTop_toBottomOf="@+id/txt_start_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/txt_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_5"
        android:text="@string/ko_up"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@+id/txt_start_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/check_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/num_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/dp_5"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@+id/txt_start_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_5"
        android:background="@color/colorAltoGray"
        app:layout_constraintTop_toBottomOf="@+id/txt_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bar_up"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_5"
        android:background="@color/colorUp"
        app:layout_constraintTop_toBottomOf="@+id/txt_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"/>

    <ImageView
        android:id="@+id/check_down"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:src="@drawable/ico_check"
        app:layout_constraintTop_toBottomOf="@+id/bar_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/txt_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_5"
        android:text="@string/ko_down"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@+id/bar_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/check_down"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/num_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/dp_5"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@+id/bar_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_down"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_5"
        android:background="@color/colorAltoGray"
        app:layout_constraintTop_toBottomOf="@+id/txt_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bar_down"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_5"
        android:background="@color/colorDown"
        app:layout_constraintTop_toBottomOf="@+id/txt_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/btn_vote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/gray_rounded_line_background"
        android:text="@string/ko_vote"
        app:layout_constraintTop_toBottomOf="@+id/bar_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/num_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:textSize="@dimen/sp_15"
        app:layout_constraintTop_toBottomOf="@+id/btn_vote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrap_edit_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:padding="@dimen/dp_10"
        android:background="@drawable/gray_rounded_line_background"
        app:layout_constraintTop_toBottomOf="@+id/num_reply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reply_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ko_please_reply"
            android:textSize="@dimen/sp_18"
            android:textColor="@android:color/tab_indicator_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/reply_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_reply"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_130"
                android:paddingTop="@dimen/dp_5"
                android:gravity="start"
                android:hint="@string/ko_message_warning_reply"
                android:textSize="@dimen/sp_15"
                android:maxLines="5"
                android:maxLength="300"
                android:background="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_1"
                android:background="@drawable/border_top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/character_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_15"/>

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_40"
                    android:text="@string/ko_post"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/sign_up_btn_background"
                    android:enabled="false"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/order_like"
        android:layout_width="@dimen/dp_60"
        android:layout_height="wrap_content"
        android:text="@string/ko_sort_by_like"
        android:textSize="@dimen/sp_18"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/wrap_edit_reply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/order_newest"
        android:layout_width="@dimen/dp_60"
        android:layout_height="wrap_content"
        android:text="@string/ko_sort_by_newest"
        android:textSize="@dimen/sp_18"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/wrap_edit_reply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/order_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>

