<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="@dimen/dp_0"
        android:background="@drawable/border_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_10"
                android:background="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ko_user_info"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:visibility="gone"
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:text="@string/ko_ok"
                android:textSize="@dimen/sp_20"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_30"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/ko_email"
            android:textSize="@dimen/sp_18"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"/>

        <TextView
            android:id="@+id/user_email"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:background="@drawable/border_bottom"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"/>

        <TextView
            android:id="@+id/txt_nick_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/ko_nickname"
            android:textSize="@dimen/sp_18"
            app:layout_constraintTop_toBottomOf="@+id/txt_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/user_nick_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:background="@drawable/border_bottom"
            app:layout_constraintTop_toBottomOf="@+id/user_email"
            app:layout_constraintStart_toEndOf="@+id/txt_nick_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"/>

        <EditText
            android:visibility="gone"
            android:id="@+id/edit_user_nick_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:maxLines="1"
            android:background="@drawable/border_bottom"
            app:layout_constraintTop_toBottomOf="@+id/user_email"
            app:layout_constraintStart_toEndOf="@+id/txt_nick_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>